--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ img {
     max-width: 100%;
     display: block;
 }
+ul {
+    list-style: none;
+}
 #app {
     padding: 0 80px;
 }
@@ -19,14 +22,14 @@ img {
     max-width: 900px;
     margin: 0 auto;
 }
-.container-produto {
+.container-product {
     display: flex;
     align-items: center;
     margin-top: 100px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
 }
-.container-produto img {
+.container-product img {
     max-width: 300px;
 }
 .description-products {
@@ -47,10 +50,13 @@ img {
     top: 0;
     left: 0;
 }
+.modal {
+    position: relative;
+}
 
 .modal-content {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -63,10 +69,49 @@ img {
 .modal-content img {
     max-width: 300px;
 }
-.container-descricao {
-    padding: 20px;
+.container-description {
+    padding: 0px 20px;
 }
-.descricao-produto h1 {
+.description-product h1 {
     font-size: 2.5em;
+    padding-bottom: 20px;
+}
+.close-modal {
+    border-radius: 50%;
+    border: 2px solid #000;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.description-product p {
+    font-size: 1.2em;
+}
+.description-product button {
+    background-color: #000;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 80px 0;
+    cursor: pointer;
+}
+
+.list-assessments {
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+    font-size: 1.2em;
+}
+.name-stars {
+    padding-top: 20px;
+    font-weight: bold;
 }
 /*Modal*/
