--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ ul {
 /*Modal*/
 .modal::before {
     content: "";
-    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
+    background: rgba(0, 0, 0, 0.5);
 }
 .modal {
     position: relative;
@@ -114,4 +114,123 @@ ul {
     padding-top: 20px;
     font-weight: bold;
 }
+.description-product .disabled-button {
+    cursor: not-allowed;
+    background-color: rgb(92, 92, 92);
+}
 /*Modal*/
+
+/*Header*/
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+header > img {
+    width: 100px;
+}
+header > div {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+header span {
+    display: block;
+    margin-right: 10px;
+}
+header span:last-of-type {
+    margin-left: 10px;
+}
+/*Header*/
+
+/*Alerta*/
+
+.Alert {
+    position: fixed;
+    top: 20px;
+    left: 0px;
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+.Alert span {
+    display: inline-block;
+    border: 2px solid #000;
+    padding: 20px 30px;
+    font-size: 1.2em;
+    background: #fff;
+}
+.Alert.ativo {
+    display: block;
+}
+
+/*Alerta*/
+
+/*Carrinho*/
+.cart {
+    display: none;
+}
+.cart.ativo {
+    display: block;
+}
+.cart::before {
+    content: "";
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+.cart-container {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    background: #fff;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 80px 20px;
+}
+.cart-container h1 {
+    border-bottom: 2px solid #000;
+    padding-bottom: 20px;
+}
+.cart-container ul li {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 0;
+    border-bottom: 1px solid #ddd;
+    font-size: 1.2em;
+}
+.remove-item {
+    background: none;
+    border: none;
+    font-size: 1em;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.cart-total {
+    padding: 15px 0;
+    text-align: right;
+    font-size: 1.2em;
+    border-bottom: 2px solid #000;
+}
+.finish-request {
+    background-color: #000;
+    display: inline-block;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-left: auto;
+    margin-top: 15px;
+}
+/*Carrinho*/
